fix:mapping chore:setup connection to db